# ray

./: .gitignore  README.md  makefile  mkfile  ray.cabal  stack.yaml
data/: l0.lev
src/: Constants.hs  Globals.hs  Level.hs  Main.hs  Player.hs
src/Data/: Angle.hs
