name:                ray
version:             0.0.1
license:             MIT
author:              Simon Zelazny
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable ray
  main-is:             Main.hs
  ghc-options:         -W
  hs-source-dirs:      src
  build-depends:       base == 4.*
                      ,SDL == 0.*